[package]
name = "project-euler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
integer-sqrt = "0.1"
strum = "0.26"
strum_macros = "0.26"
num-bigint = "0.4"
icu = "1.4"
num-format = "0.4.4"
